--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: https://github.com/danieldb18
+  github: danieldb18
   instagram:
-  linkedin: https://www.linkedin.com/in/daniel-de-biasio/
+  linkedin: daniel-de-biasio
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: jekyllrb
